<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/appoinment_box">

            <TextView
                android:id="@+id/textView_name_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/appoinment_name"
                android:fontFamily="@font/robotomonosemibold"/>

            <TextView
                android:id="@+id/textView_medical"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView_name_hospital"
                tools:text="@string/doctor_name"
                android:fontFamily="@font/robotoslab"/>

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/robotoslab"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toTopOf="@+id/textView_place"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_medical"
                tools:text="@string/date_string" />
            <TextView
                android:id="@+id/textView_time_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toTopOf="@+id/textView_place"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/time_appoinment"
                android:fontFamily="@font/robotoslab"
                />

            <TextView
                android:id="@+id/textView_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/place_appoinment"
                android:fontFamily="@font/robotoslab"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="62dp"
                android:layout_height="76dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47"
                app:srcCompat="@drawable/appoinment" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_gap"
                android:layout_marginBottom="@dimen/tiny_gap"
                app:layout_constraintBottom_toTopOf="@+id/btn_action_deleteappointment"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/btn_action_deleteappointment"
                android:layout_width="@dimen/medium_gap"
                android:layout_height="@dimen/medium_gap"
                android:layout_marginEnd="@dimen/small_gap"
                android:layout_marginBottom="@dimen/tiny_gap"
                android:backgroundTint="@android:color/holo_red_light"
                android:background="@drawable/ic_delete_"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>